--- a/extensions/aws2-s3/runtime-quarkus-amazon-s3-integration/src/main/resources/application.properties
+++ b/extensions/aws2-s3/runtime-quarkus-amazon-s3-integration/src/main/resources/application.properties
@@ -14,10 +14,7 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-#
-# Quarkus :: S3 Client options
-#
-
-quarkus.devservices.enabled=false
-# quarkus.s3.checksum-validation=false
-# quarkus.s3.sync-client.type=apache
+quarkus.s3.sync-client.type=apache
+quarkus.s3.checksum-validation=false
+# This behavior will be the default behavior in quarkus-amazon-s3 and will be removed in next major version
+quarkus.s3.unremovable-s3-presigner-bean=false
