--- a/extensions/aws2-s3/deployment-quarkus-amazon-s3-integration/pom.xml
+++ b/extensions/aws2-s3/deployment-quarkus-amazon-s3-integration/pom.xml
@@ -26,32 +26,23 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>camel-quarkus-aws2-s3-deployment</artifactId>
-    <name>Camel Quarkus :: AWS 2 S3 Storage Service :: Deployment</name>
+    <artifactId>camel-quarkus-aws2-s3-quarkus-amazon-s3-integration-deployment</artifactId>
+    <name>Camel Quarkus :: AWS 2 S3 Storage Service :: Quarkus Amazon S3 Integration :: Deployment</name>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-core-deployment</artifactId>
+            <artifactId>camel-quarkus-aws2-s3-quarkus-amazon-s3-integration</artifactId>
         </dependency>
+        
         <dependency>
-            <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-aws2-s3</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-jaxp-deployment</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-support-aws2-deployment</artifactId>
+            <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-common-deployment</artifactId>
         </dependency>
 
-        <!-- conditionaly added when quarkus-amazon-s3 is in the dependency tree-->
         <dependency>
-            <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-aws2-s3-quarkus-amazon-s3-integration-deployment</artifactId>
-             <optional>true</optional>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-aws2-s3</artifactId>
         </dependency>
     </dependencies>
 
