--- a/extensions/aws2-s3/pom.xml
+++ b/extensions/aws2-s3/pom.xml
@@ -31,7 +31,10 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>deployment</module>
+        <module>runtime-quarkus-amazon-s3-integration</module>
+        <module>deployment-quarkus-amazon-s3-integration</module>
+
         <module>runtime</module>
+        <module>deployment</module>
     </modules>
 </project>
