--- a/integration-tests/salesforce/pom.xml
+++ b/integration-tests/salesforce/pom.xml
@@ -30,6 +30,10 @@
     <name>Camel Quarkus :: Integration Tests :: Salesforce</name>
     <description>The camel integration tests</description>
 
+    <properties>
+        <allow-findbugs>true</allow-findbugs>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
@@ -78,62 +82,6 @@
     </dependencies>
 
     <profiles>
-        <profile>
-            <!-- Pass '-Dquickly' to skip enforcer and some further sanity checks -->
-            <id>full</id>
-            <activation>
-                <property>
-                    <name>!quickly</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-enforcer-plugin</artifactId>
-                        <dependencies>
-                            <dependency>
-                                <groupId>io.quarkus</groupId>
-                                <artifactId>quarkus-enforcer-rules</artifactId>
-                                <version>${quarkus.version}</version>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.l2x6.cq</groupId>
-                                <artifactId>cq-filtered-external-enforcer-rules</artifactId>
-                                <version>${cq-plugin.version}</version>
-                            </dependency>
-                        </dependencies>
-                        <executions>
-                            <execution>
-                                <id>camel-quarkus-enforcer-rules</id>
-                                <goals>
-                                    <goal>enforce</goal>
-                                </goals>
-                                <configuration>
-                                    <rules>
-                                        <dependencyConvergence />
-                                        <filteredExternalRules>
-                                            <location>classpath:enforcer-rules/quarkus-require-maven-version.xml</location>
-                                        </filteredExternalRules>
-                                        <filteredExternalRules>
-                                            <location>classpath:enforcer-rules/quarkus-banned-dependencies.xml</location>
-                                            <xsltLocation>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules/quarkus-banned-dependencies.xsl</xsltLocation>
-                                        </filteredExternalRules>
-                                        <filteredExternalRules>
-                                            <location>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules/camel-quarkus-banned-dependencies.xml</location>
-                                            <xsltLocation>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules/allow-findbugs.xsl</xsltLocation>
-                                        </filteredExternalRules>
-                                        <filteredExternalRules>
-                                            <location>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules/camel-quarkus-banned-dependencies-spring.xml</location>
-                                        </filteredExternalRules>
-                                    </rules>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
         <profile>
             <id>native</id>
             <activation>
