--- a/extensions-support/httpclient5/runtime/pom.xml
+++ b/extensions-support/httpclient5/runtime/pom.xml
@@ -38,8 +38,9 @@
             <artifactId>httpclient5</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.brotli</groupId>
-            <artifactId>dec</artifactId>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>nativeimage</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
