--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -32,6 +32,7 @@
         <!-- This property is kept in sync with project.version by the release plugin -->
         <!-- Do not change to project.version because otherwise the end user apps having our BOM as parent (rather than importing it) will stop working -->
         <camel-quarkus.version>3.15.2-SNAPSHOT</camel-quarkus.version>
+        <allow-findbugs>true</allow-findbugs>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -7629,6 +7630,7 @@
                                 </bannedDependencyResource>
                                 <bannedDependencyResource>
                                     <location>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules/camel-quarkus-banned-dependencies.xml</location>
+                                    <xsltLocation>${project.build.directory}/enforcer-rules/allow-findbugs.xsl</xsltLocation>
                                 </bannedDependencyResource>
                                 <bannedDependencyResource>
                                     <location>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules/camel-quarkus-banned-dependencies-spring.xml</location>
