Add to copy allow-findbugs.xsl since flatten-bom needs it even quickly build

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -7581,6 +7581,31 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-camel-quarkus-enforcer-rules-xslt</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/enforcer-rules</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules</directory>
+                                    <includes>
+                                        <include>allow-findbugs.xsl</include>
+                                    </includes>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.l2x6.cq</groupId>
                 <artifactId>cq-maven-plugin</artifactId>
                 <dependencies>
