--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -31,7 +31,7 @@ asciidoc:
     camel-version: 4.9.0 # replace ${camel.version}
     camel-docs-version: next
     camel-quarkus-version: 3.18.0 # replace ${camel-quarkus.version}
-    quarkus-version: 3.17.4 # replace ${quarkus.version}
+    quarkus-version: 3.18.0.CR1 # replace ${quarkus.version}
     graalvm-version: 23.1.2 # replace ${graalvm.version}
     graalvm-docs-version: jdk21 # replace ${graalvm-docs.version}
     mapstruct-version: 1.6.3 # replace ${mapstruct.version}
