--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -28,7 +28,7 @@ asciidoc:
     requires: "'util=camel-website-util,quarkus=xref:js/quarkus.js'"
 
     # Project versions
-    camel-version: 4.9.0 # replace ${camel.version}
+    camel-version: 4.10.0-SNAPSHOT # replace ${camel.version}
     camel-docs-version: next
     camel-quarkus-version: 3.18.0 # replace ${camel-quarkus.version}
     quarkus-version: 3.17.3 # replace ${quarkus.version}
