feat(extension): onboard Observability Services
Closes #6790

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -264,6 +264,8 @@
         <module>zendesk</module>
         <module>zip-deflater</module>
         <module>zipfile</module>
+        <!-- depends on the presence of other modules -->
+        <module>observability-services</module>
     </modules>
 
     <dependencyManagement>
