--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -193,6 +193,7 @@
         <module>netty-http</module>
         <module>nitrite</module>
         <module>oaipmh</module>
+        <module>observability-services</module>
         <module>ognl</module>
         <module>olingo4</module>
         <module>openapi-java</module>
