--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -172,6 +172,7 @@
         <module>netty</module>
         <module>nitrite</module>
         <module>oaipmh</module>
+        <module>observability-services</module>
         <module>ognl</module>
         <module>olingo4</module>
         <module>openapi-java</module>
