Fix #6720 to add camel-quarkus-fury

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -94,6 +94,7 @@
         <module>fop</module>
         <module>freemarker</module>
         <module>ftp</module>
+        <module>fury</module>
         <module>geocoder</module>
         <module>git</module>
         <module>github</module>
