--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -109,6 +109,7 @@
         <module>fop</module>
         <module>freemarker</module>
         <module>ftp</module>
+        <module>fury</module>
         <module>geocoder</module>
         <module>git</module>
         <module>github</module>
