--- a/integration-tests/kubernetes/pom.xml
+++ b/integration-tests/kubernetes/pom.xml
@@ -81,6 +81,7 @@
                 <quarkus.native.native-image-xmx>6g</quarkus.native.native-image-xmx>
             </properties>
         </profile>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/6892
         <profile>
             <id>native</id>
             <activation>
@@ -108,6 +109,7 @@
                 </plugins>
             </build>
         </profile>
+        -->
         <profile>
             <id>virtualDependencies</id>
             <activation>
