--- a/integration-tests/langchain4j-chat/src/main/resources/application.properties
+++ b/integration-tests/langchain4j-chat/src/main/resources/application.properties
@@ -18,6 +18,8 @@ quarkus.langchain4j.ollama.chat-model.model-name=orca-mini
 quarkus.langchain4j.ollama.chat-model.temperature=0.3
 quarkus.langchain4j.ollama.timeout=30s
 
+quarkus.langchain4j.ollama.devservices.enabled = false
+
 # Uncomment to log HTTP traffic between langchain4j & the LLM API
 #quarkus.rest-client.logging.scope=request-response
 #quarkus.rest-client.logging.body-limit=10000
